QNA-16& findbug issues mostly interger constructors and NPE in test init